--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start:api": "node tools/apiServer.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "bootstrap": "4.3.1",
